Styling overlap fixes.

--- a/capstone/src/Styles/MealPlan/DayView.css
+++ b/capstone/src/Styles/MealPlan/DayView.css
@@ -1,7 +1,3 @@
-/* Web page styles for the Meal Calendar component */
-@media (min-width: 769px) {
-    
-}
 @media screen and (max-width: 768px) {
     .meal-grid {
         display: flex !important;
@@ -9,9 +5,6 @@
         gap: 16px !important;
         max-width: 90% !important;
         margin: auto !important;
-    }
-    .day-view-container{
-        max-height: 90vh;
     }
 }
 
